# SonarPractice

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  SonarPractice_de_DE.ts  build_appimage.sh  build_installer.bat  main.cpp  setup_script.iss  sonarpractice.desktop
src/core/database/: Artist.h  AudioConfigPreset.h  CMakeLists.txt  DatabaseSchema.cpp  DatabaseSchema.h  JournalDayEntry.h  JournalEntry.h  LinkGroup.h  MediaFile.h  MediaFileMapping.h  PracticeAsset.h  PracticeNotice.h  Reminder.cpp  Reminder.h  ReminderCompletionOverride.h  ReminderCondition.h  ReminderConstants.h  ReminderDayEntry.h  RepositoryUtils.h  Song.h  SqlQueryColumns.h  SqliteArtistRepository.cpp  SqliteArtistRepository.h  SqliteAudioConfigPresetRepository.cpp  SqliteAudioConfigPresetRepository.h  SqliteConnection.cpp  SqliteConnection.h  SqliteFileRelationRepository.cpp  SqliteFileRelationRepository.h  SqliteLinkGroupRepository.cpp  SqliteLinkGroupRepository.h  SqliteMediaFileRepository.cpp  SqliteMediaFileRepository.h  SqlitePracticeAssetRepository.cpp  SqlitePracticeAssetRepository.h  SqlitePracticeJournalRepository.cpp  SqlitePracticeJournalRepository.h  SqlitePracticeNoticeRepository.cpp  SqlitePracticeNoticeRepository.h  SqliteReminderCompletionRepository.cpp  (+13 more)
src/core/database/interfaces/: IArtistRepository.h  IAudioConfigPresetRepository.h  IDatabaseConnection.h  IFileRelationRepository.h  ILinkGroupRepository.h  IMediaFileRepository.h  (+9 more)
src/core/libraryManager/: CMakeLists.txt  LibraryManager.cpp  LibraryManager.h  instrument.cpp  instrument.h
src/services/: CMakeLists.txt
src/services/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioAnalyzerCommon.cpp  AudioAnalyzerCommon.h  AudioAnalyzerHybrid.cpp  AudioAnalyzerHybrid.h  AudioAnalyzerMelodic.cpp  AudioAnalyzerMelodic.h  AudioAnalyzerRhythm.cpp  AudioAnalyzerRhythm.h  AudioAnalyzerWorker.cpp  AudioAnalyzerWorker.h  AudioBufferConverter.cpp  AudioBufferConverter.h  AudioConstants.h  AudioPeakCache.cpp  AudioPeakCache.h  AudioPeakExtractor.cpp  AudioPeakExtractor.h  AudioPlaybackEngine.cpp  AudioPlaybackEngine.h  AudioProcessorWorker.cpp  AudioProcessorWorker.h  BiquadFilter.cpp  BiquadFilter.h  CMakeLists.txt  GuitarTabLayout.cpp  GuitarTabLayout.h  ParametricEq.cpp  ParametricEq.h  PcmPlaybackIODevice.cpp  PcmPlaybackIODevice.h  RubberBandPipeline.cpp  RubberBandPipeline.h
src/services/config/: AppSettings.cpp  AppSettings.h  SettingsConfigProvider.cpp  SettingsConfigProvider.h
src/services/import/: FileImportUtils.cpp  FileImportUtils.h  IImportService.h  ImportService.cpp  ImportService.h  ImportTypes.h  ManagedFileStorage.cpp  ManagedFileStorage.h
src/services/launcher/: DesktopLauncher.cpp  DesktopLauncher.h  ILauncher.h
src/services/link/: LinkGroupService.cpp  LinkGroupService.h
src/services/logging/: ApplicationErrorLog.cpp  ApplicationErrorLog.h
src/services/media/: MediaStreamProbe.cpp  MediaStreamProbe.h
src/services/path/: IPathResolver.h  PathResolver.cpp  PathResolver.h
src/services/practice/: PracticeConstants.h  PracticeTrackerService.cpp  PracticeTrackerService.h  ReminderCompletionEvaluator.cpp  ReminderCompletionEvaluator.h
src/viewmodels/: AppInfo.h  AudioConfigController.cpp  AudioConfigController.h  CMakeLists.txt  CatalogSnapshot.cpp  CatalogSnapshot.h  CatalogViewCache.cpp  CatalogViewCache.h  DayReminderModel.cpp  DayReminderModel.h  JournalTableModel.cpp  JournalTableModel.h  LibraryLinkModel.cpp  LibraryLinkModel.h  LibrarySearchExpression.cpp  LibrarySearchExpression.h  MediaFileListModel.cpp  MediaFileListModel.h  PracticeAssetController.cpp  PracticeAssetController.h  PracticeSessionController.cpp  PracticeSessionController.h  PracticeTrackerController.cpp  PracticeTrackerController.h  ReminderController.cpp  ReminderController.h  ReminderListModel.cpp  ReminderListModel.h  SongModel.cpp  SongModel.h  ViewModelQmlSources.cmake
tests/audio/: AudioTestHelpers.h  CMakeLists.txt  tst_audioAnalyzerTest.cpp  tst_audioAnalyzerTest.h  tst_audioBufferConverterTest.cpp  tst_audioBufferConverterTest.h  tst_audioFilterTest.cpp  tst_audioFilterTest.h  tst_audioPeakCacheTest.cpp  tst_audioPeakCacheTest.h  tst_audioPeakExtractorTest.cpp  tst_audioPeakExtractorTest.h  tst_audioPlaybackHelpersTest.cpp  tst_audioPlaybackHelpersTest.h  tst_pcmPlaybackIODeviceTest.cpp  tst_pcmPlaybackIODeviceTest.h  tst_rubberBandPipelineTest.cpp  tst_rubberBandPipelineTest.h
tests/database/: CMakeLists.txt  DatabaseTestFixture.cpp  DatabaseTestFixture.h  tst_artistRepositoryTest.cpp  tst_artistRepositoryTest.h  tst_audioPresetRepositoryTest.cpp  tst_audioPresetRepositoryTest.h  tst_connectionSchemaTest.cpp  tst_connectionSchemaTest.h  tst_mediaFileRepositoryTest.cpp  tst_mediaFileRepositoryTest.h  tst_practiceAssetRepositoryTest.cpp  tst_practiceAssetRepositoryTest.h  tst_practiceJournalTest.cpp  tst_practiceJournalTest.h  tst_reminderRepositoryTest.cpp  tst_reminderRepositoryTest.h  tst_songRepositoryTest.cpp  tst_songRepositoryTest.h  tst_tuningRepositoryTest.cpp  tst_tuningRepositoryTest.h  tst_userRepositoryTest.cpp  tst_userRepositoryTest.h
tests/filehandle/: CMakeLists.txt  tst_filehandleTest.cpp  tst_filehandleTest.h
tests/libraryManager/: CMakeLists.txt  tst_libmanagerTest.cpp  tst_libmanagerTest.h
tests/qml/: CMakeLists.txt  main.cpp  qmltestsetup.cpp  qmltestsetup.h  tst_app_settings.qml  tst_config_page.qml  tst_import_sheet.qml  tst_training_panel.qml
tests/services/: CMakeLists.txt  tst_appSettingsTest.cpp  tst_appSettingsTest.h  tst_applicationErrorLogTest.cpp  tst_applicationErrorLogTest.h  tst_importServiceTest.cpp  tst_importServiceTest.h  tst_linkGroupServiceTest.cpp  tst_linkGroupServiceTest.h  tst_managedFileStorageTest.cpp  tst_managedFileStorageTest.h  tst_mediaStreamClassificationTest.cpp  tst_mediaStreamClassificationTest.h  tst_pathResolverTest.cpp  tst_pathResolverTest.h  tst_practiceTrackerTest.cpp  tst_practiceTrackerTest.h  tst_startupControllerTest.cpp  tst_startupControllerTest.h
tests/viewmodels/: CMakeLists.txt  tst_viewModelsTest.cpp  tst_viewModelsTest.h
(+82 files in other folders)
